Added technical writing webpage

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .vscode/
 /dropdowncode.txt
-/assets/webidea1.png
-/assets/Resume- Jennifer Pero.odt
 .UXWritingChallenge/
+.assets/
+.TechnicalWritingSamples/
